<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:text="@string/settings_title"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:id="@+id/language_title"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textAlignment="center" />

    <TextView
        android:text="@string/app_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/language_back"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:padding="5sp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:rotation="90"
        android:textAllCaps="true" />

    <TextView
        android:text="@string/change_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change_difficulty"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:padding="5sp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="true" />

    <TextView
        android:text="@string/language_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/language_change"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:padding="5sp"
        android:layout_marginTop="21dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="true" />
</RelativeLayout>
