<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_instructions"
    android:background="@color/colorBackground"
    tools:context="com.pum2.simonsays.InstructionsActivity">

    <TextView
        android:text="@string/instructions_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructions_title"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <TextView
        android:text="@string/app_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructions_back"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:padding="5sp"
        android:rotation="-90"
        android:textAllCaps="true"
        android:layout_alignBaseline="@+id/instructions_title"
        android:layout_alignBottom="@+id/instructions_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/listen_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listen_instructions"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:padding="5sp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="true" />
</RelativeLayout>
