<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pum2.simonsays.MainActivity">

    <TextView
        android:text="@string/main_language"
        android:layout_height="wrap_content"
        android:id="@+id/main_language"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/main_instructions"
        android:layout_alignBottom="@+id/main_instructions"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_width="160sp"
        android:padding="5sp"
        android:rotation="-90"
        android:textAllCaps="true" />

    <TextView
        android:text="@string/main_instructions"
        android:layout_height="wrap_content"
        android:id="@+id/main_instructions"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:padding="5sp"
        android:layout_width="160sp"
        android:rotation="90"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAllCaps="true" />

    <TextView
        android:text="@string/main_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_exit"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:padding="5sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="true" />

    <TextView
        android:text="@string/main_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_play"
        android:background="@color/colorPrimary"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:padding="5sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="true" />
</RelativeLayout>
